# IceDream_app_Django

./: pyproject.toml
icedream/: .env  db.sqlite3  manage.py
icedream/icedream/: asgi.py  settings.py  urls.py  wsgi.py
icedream/icedreamapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
icedream/icedreamapp/migrations/: 0001_initial.py  0002_icecream_price.py  0003_icecream_image.py  0004_cart_cartitem_cart_products_cart_user.py  0005_cart_total.py  0006_remove_cart_total_cartitem_total.py  0007_alter_cartitem_total.py  0008_icecream_special.py  0009_conebox_icecream_type.py  0010_alter_conebox_size.py  0011_delete_conebox_alter_icecream_type.py  0012_icecream_size.py  0013_checkoutinfo.py
icedream/icedreamapp/templates/icedreamapp/: about.html  base.html  cart.html  checkout.html  contact.html  exm.html  flavors.html  index.html  product.html  success.html
icedream/users/: forms.py  models.py  signals.py  views.py
icedream/users/migrations/: 0001_initial.py  0002_remove_profile_fullname_profile_city_and_more.py  0003_remove_profile_address.py
icedream/users/templates/users/: f.html  login.html  profile.html  signup.html
