[tool.poetry]
name = "chinskii-django"
version = "0.1.0"
description = ""
authors = ["Petro <114095841+PetroChulkov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2 = "^2.9.9"
cloudinary = "^1.36.0"
django-widget-tweaks = "^1.5.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

